# serverless-saleor-app-example

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml
lambda_saleor_app/: config.py  main.py
lambda_saleor_app/utils/: parameter_store.py
src/lambda_saleor_app/: __main__.py  app.py  deps.py  lambda.py  logs.py  schemas.py  secrets.py  settings.py
src/lambda_saleor_app/utils/: jwks.py  logging.py  obfuscation.py  parameter_store.py
